internal/controller/testdata/domain/domain-processing-observedDom-cert-gateway.yaml
apiVersion: sme.sap.com/v1alpha2
kind: Domain
metadata:
  name: test-cap-01-primary
  namespace: default
  finalizers:
  - sme.sap.com/domain
  labels:
    sme.sap.com/domain-host-hash: d8b11ae7b1f04e357f32290b81db58c247dac748
spec:
  dnsMode: Wildcard
  domain: app-domain.test.local
  ingressSelector:
    app: istio-ingressgateway
    istio: ingressgateway
  tlsMode: Simple
status:
  conditions:
  - message: Processing domain resources
    reason: Processing
    status: "False"
    type: Ready
  state: Processing
  dnsTarget: public-ingress.operator.testing.local
  observedDomain: app-domain.test.local
  gatewayName: test-cap-01-primary-gen
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  annotations:
    sme.sap.com/owner-identifier: Domain.default.test-cap-01-primary
    sme.sap.com/resource-hash: de4b0d824207725328caf976383e68ca2dafdb2584340e4836c70aa4fbf05f74
  labels:
    sme.sap.com/owner-generation: "0"
    sme.sap.com/owner-identifier-hash: f3b9e769089130d9d80dc05b68fb1564beb8cccc
  name: test-cap-01-primary-gen
  generateName: test-cap-01-primary-
  namespace: default
  ownerReferences:
  - apiVersion: sme.sap.com/v1alpha2
    blockOwnerDeletion: true
    controller: true
    kind: Domain
    name: test-cap-01-primary
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - ./*.app-domain.test.local
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: default--test-cap-01-primary-gardener
      mode: SIMPLE
---
apiVersion: cert.gardener.cloud/v1alpha1
kind: Certificate
metadata:
  annotations:
    sme.sap.com/owner-identifier: Domain.default.test-cap-01-primary
    sme.sap.com/resource-hash: d1230403c2273b22d7950e99d2a0cdec0f6cd33a899bcbaa82c60a95e9006c61
  finalizers:
  - sme.sap.com/domain
  labels:
    sme.sap.com/owner-generation: "0"
    sme.sap.com/owner-identifier-hash: f3b9e769089130d9d80dc05b68fb1564beb8cccc
  name: test-cap-01-primary-gen
  generateName: test-cap-01-primary-
  namespace: default
spec:
  dnsNames:
  - '*.app-domain.test.local'
  secretRef:
    name: default--test-cap-01-primary-gardener
    namespace: istio-system
